// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackStatus creates correct snapshot for status types 1`] = `
<WithStyles(Typography)
  align="center"
  className="StackStatus-textInvert-2"
  style={
    Object {
      "backgroundColor": "#bbdefb",
    }
  }
  variant="caption"
>
  Requested
</WithStyles(Typography)>
`;

exports[`StackStatus creates correct snapshot for status types 2`] = `
<WithStyles(Typography)
  align="center"
  className="StackStatus-text-1"
  style={
    Object {
      "backgroundColor": "#2196f3",
    }
  }
  variant="caption"
>
  Creating
</WithStyles(Typography)>
`;

exports[`StackStatus creates correct snapshot for status types 3`] = `
<WithStyles(Typography)
  align="center"
  className="StackStatus-text-1"
  style={
    Object {
      "backgroundColor": "#4caf50",
    }
  }
  variant="caption"
>
  Ready
</WithStyles(Typography)>
`;

exports[`StackStatus creates correct snapshot for status types 4`] = `
<WithStyles(Typography)
  align="center"
  className="StackStatus-textInvert-2"
  style={
    Object {
      "backgroundColor": "#fdd835",
    }
  }
  variant="caption"
>
  Unavailable
</WithStyles(Typography)>
`;
